cd/prd/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ${NAMESPACE}
  name: app
  labels:
    run: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - image: ${DEPLOYMENT_CONTAINER_IMAGE}
          name: app
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              memory: 512Mi
          imagePullPolicy: Always
          command: ["apache2-foreground"]
          ports:
          - containerPort: 9376
            protocol: TCP
