cd/prd/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: ${CIRCLE_PROJECT_REPONAME}
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: app
  type: NodePort
