cd/prd/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ${NAMESPACE}
  name: ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: ${INGRESS_STATIC_IP}
    networking.gke.io/managed-certificates: cert
spec:
  defaultBackend:
    service:
      name: service
      port:
        number: 8080
